--- a/main.css
+++ b/main.css
@@ -3,10 +3,9 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
-  background-image:url('https://github.com/Katanaco/jonathancschmitt.com/blob/master/images/print1.jpg');
-  background-position: center top;
+  background-image: url(:"https://github.com/Katanaco/jonathancschmitt.com/blob/master/images/print1.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-position: right top;
   color: #c992ce;
   text-shadow: 0 1px #000000;
 }
