--- a/main.css
+++ b/main.css
@@ -1,11 +1,9 @@
 html, body {
-  font-family: 'Lato', serif;
+  font-family: 'Lato', sans-serif;
   margin: 0;
   width: 100%;
   height: 100%;
   background-image: url(:"https://github.com/Katanaco/jonathancschmitt.com/blob/master/images/print1.jpg");
-  background-repeat: no-repeat;
-  background-position: right top;
   color: #c992ce;
   text-shadow: 0 1px #000000;
 }
