--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 html, body {
   font-family: 'Lato', sans-serif;
   margin: 0;
-  width: 1320px;
+  width: 100%;
   height: 100%;
   color: #000000;
 }
@@ -15,6 +15,11 @@ h1 {
   text-shadow: 1px 2px rgba(0,0,0,0.3);
 }
 
+h2 {
+  text-align: center;
+  font-size: 40px;
+}
+
 h3 {
   color: rgba(100,50,50, .7);
   font-size: 32px;
@@ -22,14 +27,15 @@ h3 {
   text-shadow: 1px 1px (rgba(255,255,255,0.4));
 }
 
-p {
-  max-width: 100%;
+h4 {
   color: #19bcb8;
+  text-align: center;
+  font-size: 28px;
+  text-shadow: 1px 1px (rgba(255,255,255,0.3));
 }
 
-h2 {
-  text-align: center;
-  font-size: 40px;
+p {
+  color: #19bcb8;
 }
 
 div {
@@ -39,11 +45,13 @@ div {
 
 .aboutme {
   height: 800px;
-  width: 1060px;
+  width: -webkit-fill-available;
+  overflow: no-content;
   background-image: url('images/back1.png');
-  background-size: auto;
+  background-size: cover;
+  background-position: center center;
   opacity: 0.6;
-  color: rgb(224,146,136);
+  color: rgb(210,140,130);
   text-shadow: 1px 2px rgba(255,255,255,.4);
   padding-left: 100px;
   padding-right: 100px;
@@ -60,14 +68,34 @@ div {
   text-align: left;
   color: rgba(62,72,49,.9);
 }
-.parallax {
+
+.aboutme p right {
+  float: right;
+  color: rgba(60,120,110,1);
+}
+
+h2 {
+  text-align: center;
+  font-size: 40px;
+}
+
+.parallax1 {
   background-image: url('images/para.jpg');
-  height: 40%;
+  height: 300px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.parallax2 {
+  background-image: url('images/para2.jpg');
+  height: 300px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+} 
 
 .container {
   display: flex;
@@ -89,7 +117,7 @@ div {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #404745;
     position: fixed;
     top: 0;
     width: 100%;
