--- a/main.css
+++ b/main.css
@@ -80,22 +80,21 @@ h2 {
   font-size: 40px;
 }
 
-.parallax1 {
-  background-image: url('images/para.jpg');
-  height: 300px;
+.parallax1, .parallax2 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
+.parallax1 {
+  background-image: url('images/para1.jpg');
+  height: 300px;
+}
+
 .parallax2 {
   background-image: url('images/para2.jpg');
   height: 300px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 } 
 
 .container {
